# S8-57M2

./: .gitignore  README.md  readme.txt
doc/Распиновка/Panel429IIT6/: Panel429IIT6.ioc  Panel429IIT6.txt
doc/Распиновка/Panel429ZIT6/: Panel429ZIT6.ioc  Panel429ZIT6.txt
sources/: CMakeLists.txt  S8-57.uvmpw  S8-57.uvmpw.uvgui.Sasha
sources/Panel/: CMakeLists.txt  Panel.sct  Panel.uvguix.Sasha  Panel.uvoptx  Panel.uvprojx
sources/Panel/src/: Log.cpp  Log.h  defines.cpp  defines.h  main.cpp  stdafx.h  structs.h
sources/Panel/src/Display/: Averager.cpp  Averager.h  Colors.cpp  Colors.h  Display.cpp  Display.h  DisplayTypes.h  Painter.cpp  Painter.h  PainterText.cpp  Painter_common.h  Painter_stm.cpp  Text.cpp  Text.h  Text_stm.cpp
sources/Panel/src/Display/Font/: AdvancedFont_p.cpp  Font_p.cpp  Font_p.h
sources/Panel/src/FPGA/: FPGATypes.h
sources/Panel/src/Hardware/: CPU.cpp  CPU.h  CPU_IT.cpp  Controls.h  Keyboard.cpp  Keyboard.h  LTDC.cpp  LTDC.h  Timer.cpp  Timer.h
sources/Panel/src/Hardware/CMSIS/: startup_stm32f429xx.s  system_stm32f4xx.c
sources/Panel/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_DAC2_stm.cpp  HAL_FSMC_stm.cpp  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h
sources/Panel/src/Hardware/stm32/: Timer4XX.cpp  Timer4XX.h  stm429.cpp  stm429.h
sources/Panel/src/Settings/: Settings.h  SettingsTypes.h
sources/Panel/src/Utils/: Debug.cpp  Debug.h  Math.cpp  Math.h  Queue.cpp  Queue.h
sources/common/: Command.h  Decoder_d.cpp  Decoder_d.h  Decoder_p.cpp  Decoder_p.h  Message.cpp  Message.h  common_defines.h
sources/common/Display/Font/: AdvancedFont_d.cpp  AdvancedFont_d.h  Font_d.cpp  Font_d.h  fontGOST28.inc  fontGOST72bold.inc  fontGOST72bold.xml  fontUGO.inc  fontUGO2.inc
sources/common/_VS/: cmsis_armcc.h  core_cm4.h
sources/common/_VS/CMSIS/: stm32f437xx.h
sources/common/_VS/FatFS/: ff.h  ff_gen_drv.h
sources/common/_VS/HAL/: stm32f4xx.h  stm32f4xx_hal.cpp  stm32f4xx_hal_adc.cpp  stm32f4xx_hal_cortex.cpp  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.cpp  stm32f4xx_hal_crc.h  stm32f4xx_hal_dac.cpp  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_flash.cpp  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.cpp  stm32f4xx_hal_gpio.cpp  stm32f4xx_hal_gpio.h  stm32f4xx_hal_hcd.h  stm32f4xx_hal_pcd.cpp  stm32f4xx_hal_pwr.cpp  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.cpp  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_rtc.cpp  stm32f4xx_hal_spi.cpp  stm32f4xx_hal_spi.h  stm32f4xx_hal_tim.cpp  stm32f4xx_hal_tim.h  stm32f4xx_hal_tim_ex.cpp  stm32f4xx_hal_uart.cpp  stm32f4xx_ll_fmc.cpp  stm32f4xx_ll_fmc.h
sources/common/_VS/HAL/Legacy/: stm32_hal_legacy.h
sources/common/_VS/USBD/: usbd_cdc.cpp  usbd_cdc.h  usbd_core.cpp  usbd_core.h  usbd_def.h
sources/common/_VS/USBH/: usbh_def.h
sources/common/_VS/std_includes/: cctype  climits  cmath  cstdarg  cstdio  cstdlib  cstring  ctype.h  limits  locale  math.h  new  sstream  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h
